non-msrv-tests/tests/ui/field_option.stderr
error: unknown option
 --> tests/ui/field_option.rs:3:32
  |
3 | struct Test1<T>(#[derive_where(option)] T);
  |                                ^^^^^^

error: unknown option
 --> tests/ui/field_option.rs:8:17
  |
8 |     #[derive_where(option)]
  |                    ^^^^^^
